fix dropdown menus overflowing the screen

--- a/app/assets/stylesheets/mock.css.scss
+++ b/app/assets/stylesheets/mock.css.scss
@@ -176,4 +176,9 @@ span.goodreads-stars a {
     font-size: 18px;
 }
 
-
+/* dropdown menu issue fix */
+.smartdrop {
+    height: auto;
+    max-height: 300px;
+    overflow-x: hidden;
+}
